[package]
name = "farm-staking-proxy"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hex-literal = "0.3.1"

[dependencies.dharitri-sc]
version = "=0.0.1"
features = ["dct-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = "=0.0.1"

[dependencies.farm]
path = "../../dex/farm"

[dependencies.farm-staking]
path = "../farm-staking"

[dependencies.pair]
path = "../../dex/pair"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.config]
path = "../../common/modules/farm/config"

[dependencies.rewards]
path = "../../common/modules/farm/rewards"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.fixed-supply-token]
path = "../../common/traits/fixed-supply-token"

[dependencies.mergeable]
path = "../../common/traits/mergeable"

[dependencies.unwrappable]
path = "../../common/traits/unwrappable"

[dependencies.sc_whitelist_module]
path = "../../common/modules/sc_whitelist_module"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.0.1"

[dev-dependencies.farm_token]
path = "../../common/modules/farm/farm_token"

[dev-dependencies.farm-boosted-yields]
path = "../../energy-integration/farm-boosted-yields"
