[package]
name = "permissions_module"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>", "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]
edition = "2021"

[lib]
path = "src/permissions_module.rs"

[dependencies]
bitflags = "1.3.2"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.dharitri-sc]
version = "=0.1.5"
features = ["dct-token-payment-legacy-decode"]
